<package format="2">
    <name>wta_led_teensy</name>
    <version>0.0.0</version>
    <description>The wta_led_teensy package</description>
    <maintainer email="anubhavgupta@ufl.edu">anubhav</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>
</package>

